MiniProject/src/objects/Query__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email</label>
        <referenceTo>Email__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiredBy__c</fullName>
        <label>FiredBy</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiredDate__c</fullName>
        <label>FiredDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Query</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>QueryId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>